<resources>
    <string name="currLocationResource">Latitude:%s, Longitude:%s</string>
    <string name="app_name">GPSCW2</string>
    <string name="globeButtonDescription">globe</string>
    <string name="homeButtonDescription">home</string>
    <string name="statsButtonDescription">Statistics</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="distanceLabelText">Distance Travelled</string>
    <string name="timeLabelText">Time Travelled</string>
    <string name="durationLabel">%02d:%02d:%02d</string>
    <string name="distanceLabel">%d m</string>
    <string name="runButton">START RUN</string>
    <string name="walkButton">START WALK</string>
    <string name="cycleButton">START CYCLING</string>
    <string name="pauseAndPlayInitial">Start Tracking Movements</string>;
    <string name="pauseAndPlayAlt">Stop Tracking Movements</string>
    <string name="makeMarkerName">Tap to make location notification</string>
    <string name="placeButton">Place</string>
    <string name="discardButton">Discard</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="notificationRangeText">Notification Range: %1$d m</string>
    <string name="descriptionLabel">Description</string>
    <string name="descriptionHint">Enter description here</string>
    <string name="title_hin">Enter Title here</string>
    <string name="discard">Discard</string>
    <string name="confirm">Confirm</string>
    <string name="makeMarkerTitle">Create a location based Notification!</string>
    <string name="notificationDescriptionHint">Description for notification</string>
    <string name="notificationTitleHint">Title for notification</string>
    <string name="deleteMarkerText">Delete Marker</string>
    <string name="notificationSwitchText">Remove after notifying</string>
    <string name="notificationTimerLabelText">notification timeout time %ds (seconds)</string>
    <string name="travelledText">Click for more travel info \n  Distance Travelled Today: \n %dm</string>
    <string name="runText">Click for more run info \n  Distance ran Today: \n %dm</string>
    <string name="walkText">Click for more walk info \n  Distance walked Today: \n %dm</string>
    <string name="cycleText">Click for more cycle info \n  Distance cycled Today: \n %dm</string>
    <string name="stopRun">STOP RUN</string>
    <string name="stop_cycling">STOP CYCLING</string>
    <string name="stop_walk">STOP WALK</string>
    <string name="movement_title">Movement Title</string>
    <string name="thumbs_down">Thumbs Down</string>
    <string name="thumbs_up">Thumbs Up</string>
    <string name="movement_description">Movement Description</string>
    <string name="rate_your_movement">Rate your %s</string>
    <string name="what_was_weather">What was the weather</string>
    <string name="rate_the_weather">Rate the weather</string>
    <string name="clear_weather">Clear weather</string>
    <string name="rainy_weather">Rainy Weather</string>
    <string name="snowy_weather">Snowy Weather</string>
    <string name="delete_movement">Delete Movement</string>
    <string name="exit">Exit</string>
    <string name="record_movement">Record Movement</string>
    <string name="daily_walk">E.g Daily Walk</string>
    <string name="previous_movement">Previous %s</string>
    <string name="ddmmyy">%d/%d/%d</string>
    <string name="duration">Duration</string>
    <string name="hhmmss">%d:%d:%d</string>
    <string name="metres">%d m</string>
    <string name="distance_travelled">Distance Travelled</string>
    <string name="delete">delete</string>
    <string name="average_duration">average duration %02d/%02d/%02d</string>
    <string name="average_distance">average distance %dm</string>
    <string name="average_speed">average speed %.2f m/s</string>
    <string name="distance_improvement">distance improvement %d%%</string>
    <string name="duration_imrpovement">duration improvement %d%%</string>
    <string name="speed_improvement">speed improvement %d%%</string>
    <string name="total_distance_travelled">total distance travelled %dm</string>
    <string name="travel_distance_improvement">travel distance improvement %d%%</string>;
</resources>