<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartMovementActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/startRun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/runButton" />

        <Button
            android:id="@+id/startWalk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/walkButton" />

        <Button
            android:id="@+id/startCycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cycleButton" />

        <TextView
            android:id="@+id/distTravelledLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/distanceLabelText"
            android:textAlignment="center"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/distanceTravelled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/distanceLabel"
            android:textAlignment="center"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timeLabelText"
            android:textAlignment="center"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/durationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/durationLabel"
            android:textAlignment="center"
            android:textSize="40sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>