<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MakeMarkerActivity">

    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="35dp"
        android:text="@string/makeMarkerTitle"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/notificationRangeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notificationRangeText"
        android:textAlignment="center"
        android:textSize="20sp" />

    <SeekBar
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="1000"
        android:min="100"
        android:progress="200" />

    <EditText
        android:id="@+id/notificationTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="To take photo..."
        android:hint="@string/notificationTitleHint"
        android:inputType="textShortMessage"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/notificationDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="This is a description"
        android:hint="@string/notificationDescriptionHint"
        android:inputType="textShortMessage"
        android:textAlignment="center"
        android:textSize="20sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/notificationConsumptionSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notificationSwitchText"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/notificationConsumptionTimeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notificationTimerLabelText"
        android:textSize="20sp" />

    <SeekBar
        android:id="@+id/notificationTimeSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="1000"
        android:min="100"
        android:progress="200" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">

        <Button
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/discard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/discard" />
    </LinearLayout>

</LinearLayout>