<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#673AB7"
        android:backgroundTint="#68673AB7">

        <EditText
            android:id="@+id/cardTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="text"
            android:text="@string/title_hin" />

        <Button
            android:id="@+id/cardDelete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/delete" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cardGoodMovement"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_weight="10"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/bad_movement_image" />

        <ImageView
            android:id="@+id/cardBadMovement"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_weight="10"
            app:srcCompat="@drawable/good_movement_image" />

        <ImageView
            android:id="@+id/cardSunWeather"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_weight="10"
            app:srcCompat="@drawable/sun_weather_image" />

        <ImageView
            android:id="@+id/cardRainWeather"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_weight="10"
            app:srcCompat="@drawable/rain_weather_icon" />

        <ImageView
            android:id="@+id/cardSnowWeather"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_weight="10"
            app:srcCompat="@drawable/snow_weather_icon" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/cardDescription"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="text"
            android:text="@string/descriptionHint" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance_travelled" />

            <TextView
                android:id="@+id/cardDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metres" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration" />

            <TextView
                android:id="@+id/cardDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hhmmss" />

            <TextView
                android:id="@+id/cardDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ddmmyy" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/cardSaveChanges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="save" />

            <Button
                android:id="@+id/cardDiscardChanges"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="discard" />
        </LinearLayout>

    </TableRow>
</TableLayout>