<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatFragment">

    <!-- TODO: Update blank fragment layout -->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/movementAverage"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/timeAverage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/averageDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/average_duration"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/averageDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/average_distance"
                android:textSize="20sp" />

        </LinearLayout>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/distanceImprove"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/distance_improvement"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/durationImprove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration_imrpovement"
                android:textSize="20sp" />

        </LinearLayout>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Spinner
            android:id="@+id/travelTime"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/totalDistanceTravelled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_distance_travelled"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/travelImprovement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/travel_distance_improvement"
                android:textSize="20sp" />
        </LinearLayout>

    </TableRow>


</TableLayout>